kubernetes/apps/default/vaultwarden/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden
spec:
  endpointSelector:
    matchLabels:
      app:kubernetes.io/component: vaultwarden
      app:kubernetes.io/instance: vaultwarden
      app:kubernetes.io/name: vaultwarden
  egress:
    - toEndpoints:
        - matchLabels:
            postgres-operator:crunchydata.com/cluster: postgres-16
        - matchLabels:
            io:kubernetes.pod.namespace: infrastructure
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            any:k8s-app: kube-dns
            app:kubernetes.io/instance: coredns
            app:kubernetes.io/name: coredns
        - matchLabels:
            io:kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app:kubernetes.io/component: controller
            app:kubernetes.io/instance: nginx-external
            app:kubernetes.io/name: ingress-nginx
        - matchLabels:
            io:kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
